--- a/libasm_tester/Makefile
+++ b/libasm_tester/Makefile
@@ -13,6 +13,7 @@ SRCS = main.c \
        test_ft_strcmp.c \
        test_ft_write.c \
        test_ft_read.c \
+       test_ft_strdup.c \
        test_stubs.c \
        libasm_weak.c
 
