--- a/libasm_tester/Makefile
+++ b/libasm_tester/Makefile
@@ -15,6 +15,7 @@ SRCS = main.c \
        test_ft_read.c \
        test_ft_strdup.c \
        test_ft_atoi_base.c \
+       test_ft_list_push_front.c \
        test_stubs.c \
        libasm_weak.c
 
