feat: Adds memory checking tests.

--- a/libasm_tester/Makefile
+++ b/libasm_tester/Makefile
@@ -17,7 +17,8 @@ SRCS = main.c \
        test_ft_atoi_base.c \
        test_ft_list_push_front.c \
        test_stubs.c \
-       libasm_weak.c
+       libasm_weak.c \
+       memory_tracker.c
 
 OBJS = $(SRCS:.c=.o)
 
