--- a/libasm_tester/Makefile
+++ b/libasm_tester/Makefile
@@ -27,7 +27,7 @@ LIBASM_PATH_FILE = .libasm_path
 LIBASM_PATH = $(shell cat $(LIBASM_PATH_FILE) 2>/dev/null | tr -d '\n')
 LIBASM_LIB = $(LIBASM_PATH)/libasm.a
 
-.PHONY: all clean fclean re test test_verbose
+.PHONY: all clean fclean re test test_verbose test_valgrind help fclean_all fclean_objs test_with_lib
 
 all: $(NAME)
 
@@ -81,6 +81,32 @@ test_verbose:
 	echo ""; \
 	./$(NAME) -v "$$LIBASM_PATH"
 
+# Run tests with valgrind memory leak detection
+test_valgrind:
+	@if [ ! -f $(LIBASM_PATH_FILE) ]; then \
+		read -p "Enter the absolute path to your libasm project: " path; \
+		echo -n "$$path" > $(LIBASM_PATH_FILE); \
+	fi
+	@if ! command -v valgrind >/dev/null 2>&1; then \
+		echo "\033[1;31mError: valgrind is not installed\033[0m"; \
+		echo "Install it with: sudo apt-get install valgrind"; \
+		exit 1; \
+	fi
+	@LIBASM_PATH=$$(cat $(LIBASM_PATH_FILE) | tr -d '\n'); \
+	echo "Using libasm from: $$LIBASM_PATH"; \
+	echo "Building libasm..."; \
+	$(MAKE) -C "$$LIBASM_PATH" > /dev/null 2>&1; \
+	$(MAKE) -C "$$LIBASM_PATH" bonus > /dev/null 2>&1 || true; \
+	if [ ! -f "$$LIBASM_PATH/libasm.a" ]; then \
+		echo "Error: libasm.a not found at $$LIBASM_PATH/libasm.a"; \
+		exit 1; \
+	fi; \
+	echo "Recompiling test suite with debug symbols..."; \
+	$(MAKE) fclean_objs > /dev/null 2>&1; \
+	$(MAKE) CFLAGS="$(CFLAGS) -g -I$$LIBASM_PATH" LDFLAGS="$$LIBASM_PATH/libasm.a" test_with_lib > /dev/null 2>&1; \
+	echo ""; \
+	./run_valgrind.sh ./$(NAME) "$$LIBASM_PATH"
+
 test_with_lib: $(OBJS)
 	$(CC) $(CFLAGS) -Wl,--whole-archive $(LDFLAGS) -Wl,--no-whole-archive $(OBJS) -o $(NAME)
 
@@ -94,10 +120,11 @@ fclean_objs:
 fclean: clean
 	@echo "Cleaning executable..."
 	@rm -f $(NAME)
+	@rm -f valgrind_raw.log valgrind_summary.log valgrind.log
 
 fclean_all: fclean
-	@echo "Cleaning libasm path cache..."
-	@rm -f $(LIBASM_PATH_FILE)
+	@echo "Cleaning libasm path cache and valgrind files..."
+	@rm -f $(LIBASM_PATH_FILE) valgrind.supp
 
 re: fclean all
 
@@ -105,13 +132,15 @@ help:
 	@echo "LIBASM Tester Makefile"
 	@echo ""
 	@echo "Usage:"
-	@echo "  make           - Compile the test suite (without libasm)"
-	@echo "  make test      - Build libasm and run all tests"
-	@echo "  make clean     - Remove object files"
-	@echo "  make fclean    - Remove object files and executable"
-	@echo "  make fclean_all- Remove everything including saved libasm path"
-	@echo "  make re        - Recompile from scratch"
-	@echo "  make help      - Show this help message"
+	@echo "  make              - Compile the test suite (without libasm)"
+	@echo "  make test         - Build libasm and run all tests"
+	@echo "  make test_verbose - Run tests with detailed output"
+	@echo "  make test_valgrind- Run tests with valgrind memory leak detection"
+	@echo "  make clean        - Remove object files"
+	@echo "  make fclean       - Remove object files and executable"
+	@echo "  make fclean_all   - Remove everything including saved libasm path"
+	@echo "  make re           - Recompile from scratch"
+	@echo "  make help         - Show this help message"
 	@echo ""
 	@echo "You can also run the tester directly:"
 	@echo "  ./$(NAME) [path_to_libasm]"
