feat: Implement tests for ft_list_size.

--- a/libasm_tester/Makefile
+++ b/libasm_tester/Makefile
@@ -16,9 +16,9 @@ SRCS = main.c \
        test_ft_strdup.c \
        test_ft_atoi_base.c \
        test_ft_list_push_front.c \
+       test_ft_list_size.c \
        test_stubs.c \
-       libasm_weak.c \
-       memory_tracker.c
+       libasm_weak.c
 
 OBJS = $(SRCS:.c=.o)
 
